@@ -1,3 +1,7 @@
+Fri Jul 30 19:47:11 CEST 2004 (tk)
+----------------------------------
+  * clamd: scanstream: add mutex around gethostbyname
+
 Fri Jul 30 19:10:44 CEST 2004 (tk)
 ----------------------------------
   * libclamav: cli_bm_free: free b-m nodes (patch by Igor Brezac
